2008-06-20  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_init): New optional arguments host,
	port, and encryption.

2008-06-17  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPrinterAttributes): Enum-type
	attributes may be lists.

2008-05-30  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPrinterAttributes): New
	optional requested_attributes argument.

2008-05-29  Tim Waugh  <twaugh@redhat.com>

	* configure.in: Version 1.9.39.

2008-05-29  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_authenticateJob): Allow auth
	parameter to be optional in order to allow for Kerberos
	authentication.

2008-05-27  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (free_string_list): New helper function.
	(Connection_printFiles): New method.
	Patch from Fabian Knittel.

	* cupsconnection.c (Connection_printFile): New method.  Patch from
	Fabian Knittel.

2008-04-09  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_printTestPage): Test for existence
	of testprint.ps before performing operation, and look around for
	it if necessary.

2008-04-03  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.38.

2008-04-03  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getDocument): Fixed missing
	argument to snprintf.

2008-04-01  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getFile): Allow destination to be a
	file descriptor or a Python file object, and call cupsGetFd() in
	those cases.

2008-03-17  Tim Waugh  <twaugh@redhat.com>

	* Makefile: Version 1.9.37.

2008-03-15  Tim Waugh  <twaugh@redhat.com>

	* cupsconnection.c (Connection_getPrinterAttributes): Prevent
	memory leak.
	(Connection_getNotifications): Likewise.
	(Dest_getOptions): Likewise.

2008-03-14  Tim Waugh  <twaugh@redhat.com>

	* cupsmodule.c (initcups): Add CUPS_PRINTER_DISCOVERED constant.

2008-03-12  Tim Waugh  <twaugh@redhat.com>
